fix instagram overflow https://github.com/Codeinwp/tweet-old-post-pro/issues/544

--- a/assets/css/rop_core.css
+++ b/assets/css/rop_core.css
@@ -1328,6 +1328,7 @@ a.active {
     display: -webkit-flex;
     display: flex;
     display: -ms-flexbox;
+    flex-wrap: wrap;
 }
 
 #rop_core .input-group .input-group-addon {
